{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 64,
  "lineage": "3a978031-2d8b-52f2-b4b2-cf0f92a2c1f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-lab4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202533543604:loadbalancer/app/alb-lab4/b8f96e0b96e6d2fd",
            "arn_suffix": "app/alb-lab4/b8f96e0b96e6d2fd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-lab4-451762628.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:202533543604:loadbalancer/app/alb-lab4/b8f96e0b96e6d2fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-lab4",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03221885b67022db3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051fb05b81682567e"
              },
              {
                "subnet_id": "subnet-06a0e9f14248bda57"
              }
            ],
            "subnets": [
              "subnet-051fb05b81682567e",
              "subnet-06a0e9f14248bda57"
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "alb-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "alb-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202533543604:listener/app/alb-lab4/b8f96e0b96e6d2fd/e932aa68fbea4723",
            "certificate_arn": "arn:aws:acm:us-east-1:202533543604:certificate/a7a8ccf8-cf1b-4910-b99b-f901745d95af",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:202533543604:targetgroup/tg-alb/ef5a5875830a809e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:202533543604:listener/app/alb-lab4/b8f96e0b96e6d2fd/e932aa68fbea4723",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:202533543604:loadbalancer/app/alb-lab4/b8f96e0b96e6d2fd",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Env": "Lab4",
              "Name": "Listener-HTTPS-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "Listener-HTTPS-Lab4",
              "Owner": "Dani"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.certificado-SSL",
            "aws_lb.alb-lab4",
            "aws_lb_target_group.tg-alb",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:202533543604:targetgroup/tg-alb/ef5a5875830a809e",
            "arn_suffix": "targetgroup/tg-alb/ef5a5875830a809e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:202533543604:targetgroup/tg-alb/ef5a5875830a809e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:202533543604:loadbalancer/app/alb-lab4/b8f96e0b96e6d2fd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-alb",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "TG-ALB-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "TG-ALB-Lab4",
              "Owner": "Dani"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-EFS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:security-group/sg-0220f9518f917ccdc",
            "description": "SG para EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0220f9518f917ccdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SG-EFS",
            "name_prefix": "",
            "owner_id": "202533543604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab4",
              "Name": "SG-EFS-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "SG-EFS-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-PSQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:security-group/sg-0344fe2bab2063e9e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0344fe2bab2063e9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20241102180709385900000004",
            "name_prefix": "terraform-",
            "owner_id": "202533543604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab4",
              "Name": "SG-PSQL-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "SG-PSQL-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-instancias",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:security-group/sg-09f0c26dd7e2f1248",
            "description": "Security Group de instancias",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f0c26dd7e2f1248",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0220f9518f917ccdc"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03221885b67022db3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-instancias",
            "name_prefix": "",
            "owner_id": "202533543604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab4",
              "Name": "SG-Instancias-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "SG-Instancias-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-EFS",
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:security-group/sg-03221885b67022db3",
            "description": "Security Group del ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03221885b67022db3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "202533543604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab4",
              "Name": "SG-ALB-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "SG-ALB-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:network-acl/acl-0cc32173192ab22b5",
            "default_network_acl_id": "acl-0cc32173192ab22b5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0cc32173192ab22b5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "202533543604",
            "subnet_ids": [
              "subnet-015ebecf4f0167c57",
              "subnet-051fb05b81682567e",
              "subnet-06a0e9f14248bda57",
              "subnet-0effa67f830ce4e25"
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:route-table/rtb-092c0d29fd080ea01",
            "default_route_table_id": "rtb-092c0d29fd080ea01",
            "id": "rtb-092c0d29fd080ea01",
            "owner_id": "202533543604",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:security-group/sg-029564a50ea3ceaf8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-029564a50ea3ceaf8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "202533543604",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022975e7c2cc3fc4e",
            "arn": "arn:aws:ec2:us-east-1:202533543604:elastic-ip/eipalloc-022975e7c2cc3fc4e",
            "association_id": "eipassoc-00bb38e495077b08c",
            "domain": "vpc",
            "id": "eipalloc-022975e7c2cc3fc4e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e0a18f455d07e6e",
            "private_dns": "ip-172-16-1-188.ec2.internal",
            "private_ip": "172.16.1.188",
            "public_dns": "ec2-98-83-72-235.compute-1.amazonaws.com",
            "public_ip": "98.83.72.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5532478c5f73786",
            "arn": "arn:aws:ec2:us-east-1:202533543604:elastic-ip/eipalloc-0a5532478c5f73786",
            "association_id": "eipassoc-0044777cf4535baac",
            "domain": "vpc",
            "id": "eipalloc-0a5532478c5f73786",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e4e7b53d7fbd907",
            "private_dns": "ip-172-16-2-131.ec2.internal",
            "private_ip": "172.16.2.131",
            "public_dns": "ec2-98-83-225-155.compute-1.amazonaws.com",
            "public_ip": "98.83.225.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:internet-gateway/igw-0d1bb40d455725d20",
            "id": "igw-0d1bb40d455725d20",
            "owner_id": "202533543604",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022975e7c2cc3fc4e",
            "association_id": "eipassoc-00bb38e495077b08c",
            "connectivity_type": "public",
            "id": "nat-03ae891e505fe315c",
            "network_interface_id": "eni-02e0a18f455d07e6e",
            "private_ip": "172.16.1.188",
            "public_ip": "98.83.72.235",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06a0e9f14248bda57",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5532478c5f73786",
            "association_id": "eipassoc-0044777cf4535baac",
            "connectivity_type": "public",
            "id": "nat-0fa1ce80fbb7bbdb5",
            "network_interface_id": "eni-05e4e7b53d7fbd907",
            "private_ip": "172.16.2.131",
            "public_ip": "98.83.225.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-051fb05b81682567e",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02177121c8746a48f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03ae891e505fe315c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02177121c8746a48f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086a897d4df8b08b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa1ce80fbb7bbdb5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086a897d4df8b08b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d1bb40d455725d20",
            "id": "r-rtb-057e575d7fabe65571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057e575d7fabe6557",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:route-table/rtb-02177121c8746a48f",
            "id": "rtb-02177121c8746a48f",
            "owner_id": "202533543604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ae891e505fe315c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:route-table/rtb-086a897d4df8b08b7",
            "id": "rtb-086a897d4df8b08b7",
            "owner_id": "202533543604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa1ce80fbb7bbdb5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:route-table/rtb-057e575d7fabe6557",
            "id": "rtb-057e575d7fabe6557",
            "owner_id": "202533543604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1bb40d455725d20",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b6ad8fba3bf2c4",
            "route_table_id": "rtb-02177121c8746a48f",
            "subnet_id": "subnet-0effa67f830ce4e25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2989f050ee3c17",
            "route_table_id": "rtb-086a897d4df8b08b7",
            "subnet_id": "subnet-015ebecf4f0167c57"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7da116e55496b87",
            "route_table_id": "rtb-057e575d7fabe6557",
            "subnet_id": "subnet-06a0e9f14248bda57"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939e42a70b5d5056",
            "route_table_id": "rtb-057e575d7fabe6557",
            "subnet_id": "subnet-051fb05b81682567e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:subnet/subnet-0effa67f830ce4e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0effa67f830ce4e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533543604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:subnet/subnet-015ebecf4f0167c57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015ebecf4f0167c57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533543604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:subnet/subnet-06a0e9f14248bda57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a0e9f14248bda57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533543604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:subnet/subnet-051fb05b81682567e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051fb05b81682567e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202533543604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "vpc_id": "vpc-05b54ba136d41130f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533543604:vpc/vpc-05b54ba136d41130f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0cc32173192ab22b5",
            "default_route_table_id": "rtb-092c0d29fd080ea01",
            "default_security_group_id": "sg-029564a50ea3ceaf8",
            "dhcp_options_id": "dopt-007cd0ab29d28ae80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b54ba136d41130f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092c0d29fd080ea01",
            "owner_id": "202533543604",
            "tags": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            },
            "tags_all": {
              "Env": "Lab4",
              "Name": "VPC-Lab4",
              "Owner": "Dani"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}